Trabalho2/Asem/gramaticaParser.py
# Generated from Asem/gramatica.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'int'", "'string'", "'float'", 
                     "'break'", "'='", "'print'", "'{'", "'}'", "'['", "']'", 
                     "'read'", "'return'", "'('", "')'", "'if'", "'else'", 
                     "'for'", "'null'", "'new'", "','", "';'", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "DEF", "INT", "STRING", "FLOAT", "BREAK", 
                      "ATRIBUICAO", "PRINT", "CHAVEA", "CHAVEF", "COLCHA", 
                      "COLCHF", "READ", "RETURN", "PARENTEA", "PARENTEF", 
                      "IF", "ELSE", "FOR", "NULL", "NEW", "VIRGULA", "PONTOEVIRGULA", 
                      "MENORQUE", "MAIORQUE", "MENOREIGUAL", "MAIOREIGUAL", 
                      "IGUAL", "DIFERENTE", "MAIS", "MENOS", "MULTIPLICACAO", 
                      "DIVISAO", "MODULO", "IDENT", "INT_CONSTANT", "FLOAT_CONSTANT", 
                      "STRING_CONSTANT", "WS" ]

    RULE_program = 0
    RULE_funclist = 1
    RULE_funcdef = 2
    RULE_a = 3
    RULE_paramlist = 4
    RULE_statement = 5
    RULE_b = 6
    RULE_vardecl = 7
    RULE_c = 8
    RULE_atribstat = 9
    RULE_funccall = 10
    RULE_paramlistcall = 11
    RULE_printstat = 12
    RULE_readstat = 13
    RULE_returnstat = 14
    RULE_ifstat = 15
    RULE_forstat = 16
    RULE_statelist = 17
    RULE_d = 18
    RULE_allocexpression = 19
    RULE_comparadores = 20
    RULE_expression = 21
    RULE_maisoumenos = 22
    RULE_e = 23
    RULE_numexpression = 24
    RULE_mdm = 25
    RULE_f = 26
    RULE_term = 27
    RULE_unaryexpr = 28
    RULE_factor = 29
    RULE_g = 30
    RULE_lvalue = 31

    ruleNames =  [ "program", "funclist", "funcdef", "a", "paramlist", "statement", 
                   "b", "vardecl", "c", "atribstat", "funccall", "paramlistcall", 
                   "printstat", "readstat", "returnstat", "ifstat", "forstat", 
                   "statelist", "d", "allocexpression", "comparadores", 
                   "expression", "maisoumenos", "e", "numexpression", "mdm", 
                   "f", "term", "unaryexpr", "factor", "g", "lvalue" ]

    EOF = Token.EOF
    DEF=1
    INT=2
    STRING=3
    FLOAT=4
    BREAK=5
    ATRIBUICAO=6
    PRINT=7
    CHAVEA=8
    CHAVEF=9
    COLCHA=10
    COLCHF=11
    READ=12
    RETURN=13
    PARENTEA=14
    PARENTEF=15
    IF=16
    ELSE=17
    FOR=18
    NULL=19
    NEW=20
    VIRGULA=21
    PONTOEVIRGULA=22
    MENORQUE=23
    MAIORQUE=24
    MENOREIGUAL=25
    MAIOREIGUAL=26
    IGUAL=27
    DIFERENTE=28
    MAIS=29
    MENOS=30
    MULTIPLICACAO=31
    DIVISAO=32
    MODULO=33
    IDENT=34
    INT_CONSTANT=35
    FLOAT_CONSTANT=36
    STRING_CONSTANT=37
    WS=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(gramaticaParser.StatementContext,0)


        def funclist(self):
            return self.getTypedRuleContext(gramaticaParser.FunclistContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = gramaticaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaParser.INT, gramaticaParser.STRING, gramaticaParser.FLOAT, gramaticaParser.BREAK, gramaticaParser.PRINT, gramaticaParser.CHAVEA, gramaticaParser.READ, gramaticaParser.RETURN, gramaticaParser.IF, gramaticaParser.FOR, gramaticaParser.PONTOEVIRGULA, gramaticaParser.IDENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.statement()
                pass
            elif token in [gramaticaParser.DEF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.funclist()
                pass
            elif token in [gramaticaParser.EOF]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunclistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self):
            return self.getTypedRuleContext(gramaticaParser.FuncdefContext,0)


        def funclist(self):
            return self.getTypedRuleContext(gramaticaParser.FunclistContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_funclist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunclist" ):
                listener.enterFunclist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunclist" ):
                listener.exitFunclist(self)




    def funclist(self):

        localctx = gramaticaParser.FunclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funclist)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.funcdef()
                self.state = 70
                self.funclist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.funcdef()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(gramaticaParser.DEF, 0)

        def IDENT(self):
            return self.getToken(gramaticaParser.IDENT, 0)

        def PARENTEA(self):
            return self.getToken(gramaticaParser.PARENTEA, 0)

        def paramlist(self):
            return self.getTypedRuleContext(gramaticaParser.ParamlistContext,0)


        def PARENTEF(self):
            return self.getToken(gramaticaParser.PARENTEF, 0)

        def CHAVEA(self):
            return self.getToken(gramaticaParser.CHAVEA, 0)

        def statelist(self):
            return self.getTypedRuleContext(gramaticaParser.StatelistContext,0)


        def CHAVEF(self):
            return self.getToken(gramaticaParser.CHAVEF, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)




    def funcdef(self):

        localctx = gramaticaParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(gramaticaParser.DEF)
            self.state = 76
            self.match(gramaticaParser.IDENT)
            self.state = 77
            self.match(gramaticaParser.PARENTEA)
            self.state = 78
            self.paramlist()
            self.state = 79
            self.match(gramaticaParser.PARENTEF)
            self.state = 80
            self.match(gramaticaParser.CHAVEA)
            self.state = 81
            self.statelist()
            self.state = 82
            self.match(gramaticaParser.CHAVEF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def INT(self):
            return self.getToken(gramaticaParser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramaticaParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramaticaParser.STRING, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)




    def a(self):

        localctx = gramaticaParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_a)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaParser.INT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(gramaticaParser.INT)
                localctx.value = 'int'
                pass
            elif token in [gramaticaParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(gramaticaParser.FLOAT)
                localctx.value = 'float'
                pass
            elif token in [gramaticaParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(gramaticaParser.STRING)
                localctx.value = 'string'
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a(self):
            return self.getTypedRuleContext(gramaticaParser.AContext,0)


        def IDENT(self):
            return self.getToken(gramaticaParser.IDENT, 0)

        def VIRGULA(self):
            return self.getToken(gramaticaParser.VIRGULA, 0)

        def paramlist(self):
            return self.getTypedRuleContext(gramaticaParser.ParamlistContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_paramlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlist" ):
                listener.enterParamlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlist" ):
                listener.exitParamlist(self)




    def paramlist(self):

        localctx = gramaticaParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramlist)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.a()
                self.state = 93
                self.match(gramaticaParser.IDENT)
                self.state = 94
                self.match(gramaticaParser.VIRGULA)
                self.state = 95
                self.paramlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.a()
                self.state = 98
                self.match(gramaticaParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._BREAK = None # Token

        def vardecl(self):
            return self.getTypedRuleContext(gramaticaParser.VardeclContext,0)


        def PONTOEVIRGULA(self):
            return self.getToken(gramaticaParser.PONTOEVIRGULA, 0)

        def atribstat(self):
            return self.getTypedRuleContext(gramaticaParser.AtribstatContext,0)


        def printstat(self):
            return self.getTypedRuleContext(gramaticaParser.PrintstatContext,0)


        def readstat(self):
            return self.getTypedRuleContext(gramaticaParser.ReadstatContext,0)


        def returnstat(self):
            return self.getTypedRuleContext(gramaticaParser.ReturnstatContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(gramaticaParser.IfstatContext,0)


        def forstat(self):
            return self.getTypedRuleContext(gramaticaParser.ForstatContext,0)


        def CHAVEA(self):
            return self.getToken(gramaticaParser.CHAVEA, 0)

        def statelist(self):
            return self.getTypedRuleContext(gramaticaParser.StatelistContext,0)


        def CHAVEF(self):
            return self.getToken(gramaticaParser.CHAVEF, 0)

        def BREAK(self):
            return self.getToken(gramaticaParser.BREAK, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = gramaticaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaParser.INT, gramaticaParser.STRING, gramaticaParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.vardecl()
                self.state = 103
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.atribstat()
                self.state = 106
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.printstat()
                self.state = 109
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.READ]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.readstat()
                self.state = 112
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.returnstat()
                self.state = 115
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.IF]:
                self.enterOuterAlt(localctx, 6)
                self.state = 117
                self.ifstat()
                pass
            elif token in [gramaticaParser.FOR]:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.forstat()
                pass
            elif token in [gramaticaParser.CHAVEA]:
                self.enterOuterAlt(localctx, 8)
                self.state = 119
                self.match(gramaticaParser.CHAVEA)
                self.state = 120
                self.statelist()
                self.state = 121
                self.match(gramaticaParser.CHAVEF)
                pass
            elif token in [gramaticaParser.BREAK]:
                self.enterOuterAlt(localctx, 9)
                self.state = 123
                localctx._BREAK = self.match(gramaticaParser.BREAK)
                testar_break(localctx._BREAK)
                self.state = 125
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            elif token in [gramaticaParser.PONTOEVIRGULA]:
                self.enterOuterAlt(localctx, 10)
                self.state = 126
                self.match(gramaticaParser.PONTOEVIRGULA)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, inhr=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.inhr = None
            self.syn = None
            self._INT_CONSTANT = None # Token
            self._b = None # BContext
            self.inhr = inhr

        def COLCHA(self):
            return self.getToken(gramaticaParser.COLCHA, 0)

        def INT_CONSTANT(self):
            return self.getToken(gramaticaParser.INT_CONSTANT, 0)

        def COLCHF(self):
            return self.getToken(gramaticaParser.COLCHF, 0)

        def b(self):
            return self.getTypedRuleContext(gramaticaParser.BContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_b

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB" ):
                listener.enterB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB" ):
                listener.exitB(self)




    def b(self, inhr):

        localctx = gramaticaParser.BContext(self, self._ctx, self.state, inhr)
        self.enterRule(localctx, 12, self.RULE_b)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaParser.COLCHA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(gramaticaParser.COLCHA)
                self.state = 130
                localctx._INT_CONSTANT = self.match(gramaticaParser.INT_CONSTANT)
                self.state = 131
                self.match(gramaticaParser.COLCHF)
                self.state = 132
                localctx._b = self.b("vector(%s, %s)" %(localctx.inhr, (None if localctx._INT_CONSTANT is None else localctx._INT_CONSTANT.text)))
                localctx.syn = localctx._b.syn
                pass
            elif token in [gramaticaParser.PONTOEVIRGULA]:
                self.enterOuterAlt(localctx, 2)
                localctx.syn = localctx.inhr
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._a = None # AContext
            self._IDENT = None # Token
            self._b = None # BContext

        def a(self):
            return self.getTypedRuleContext(gramaticaParser.AContext,0)


        def IDENT(self):
            return self.getToken(gramaticaParser.IDENT, 0)

        def b(self):
            return self.getTypedRuleContext(gramaticaParser.BContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = gramaticaParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            localctx._a = self.a()
            self.state = 139
            localctx._IDENT = self.match(gramaticaParser.IDENT)
            self.state = 140
            localctx._b = self.b(localctx._a.value)
            insert_symbol_table(localctx._IDENT, localctx._b.syn)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def allocexpression(self):
            return self.getTypedRuleContext(gramaticaParser.AllocexpressionContext,0)


        def funccall(self):
            return self.getTypedRuleContext(gramaticaParser.FunccallContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_c

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC" ):
                listener.enterC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC" ):
                listener.exitC(self)




    def c(self):

        localctx = gramaticaParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_c)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.allocexpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.funccall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtribstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(gramaticaParser.LvalueContext,0)


        def ATRIBUICAO(self):
            return self.getToken(gramaticaParser.ATRIBUICAO, 0)

        def c(self):
            return self.getTypedRuleContext(gramaticaParser.CContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_atribstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribstat" ):
                listener.enterAtribstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribstat" ):
                listener.exitAtribstat(self)




    def atribstat(self):

        localctx = gramaticaParser.AtribstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atribstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.lvalue()
            self.state = 149
            self.match(gramaticaParser.ATRIBUICAO)
            self.state = 150
            self.c()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunccallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(gramaticaParser.IDENT, 0)

        def PARENTEA(self):
            return self.getToken(gramaticaParser.PARENTEA, 0)

        def paramlistcall(self):
            return self.getTypedRuleContext(gramaticaParser.ParamlistcallContext,0)


        def PARENTEF(self):
            return self.getToken(gramaticaParser.PARENTEF, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_funccall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunccall" ):
                listener.enterFunccall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunccall" ):
                listener.exitFunccall(self)




    def funccall(self):

        localctx = gramaticaParser.FunccallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funccall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(gramaticaParser.IDENT)
            self.state = 153
            self.match(gramaticaParser.PARENTEA)
            self.state = 154
            self.paramlistcall()
            self.state = 155
            self.match(gramaticaParser.PARENTEF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamlistcallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(gramaticaParser.IDENT, 0)

        def VIRGULA(self):
            return self.getToken(gramaticaParser.VIRGULA, 0)

        def paramlistcall(self):
            return self.getTypedRuleContext(gramaticaParser.ParamlistcallContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_paramlistcall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlistcall" ):
                listener.enterParamlistcall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlistcall" ):
                listener.exitParamlistcall(self)




    def paramlistcall(self):

        localctx = gramaticaParser.ParamlistcallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramlistcall)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(gramaticaParser.IDENT)
                self.state = 158
                self.match(gramaticaParser.VIRGULA)
                self.state = 159
                self.paramlistcall()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(gramaticaParser.IDENT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(gramaticaParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_printstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintstat" ):
                listener.enterPrintstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintstat" ):
                listener.exitPrintstat(self)




    def printstat(self):

        localctx = gramaticaParser.PrintstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_printstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(gramaticaParser.PRINT)
            self.state = 165
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
